added a construction to add the information for each character

--- a/index.html
+++ b/index.html
@@ -24,91 +24,91 @@
 		</div>
 
 		<div class="row">
-			<div class ="col-md-6 col-sm-12 col-xs-12 hero">
+			<div class ="col-md-6 col-sm-12 col-xs-12 heroe">
 				<div class="subheading">
 				Heroes
 				</div>
 				<div class="row">
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe1" class="card card1" style="width: 100%;">
+						<div id= "heroe1" class="card" data-imageId="1" style="width: 100%;">
 						  <img id="image" class="card-img-top" src="assets/images/CaptainAmerica.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Captain America</h4>
-						    <p class="card-text">Health points:<span class="heroeHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe2" class="card card2" style="width: 100%;">
+						<div id= "heroe2" class="card" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Spiderman.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Spiderman</h4>
-						    <p class="card-text">Health points:<span class="heroeHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe3" class="card card3" style="width: 100%;">
+						<div id= "heroe3" class="card" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Thor.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Thor</h4>
-						    <p class="card-text">Health points:<span class="heroeHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe4" class="card card4" style="width: 100%;">
+						<div id= "heroe4" class="card" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Batman.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Batman</h4>
-						    <p class="card-text">Health points:<span class="heroeHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class= "col-md-6 col-sm-12 col-xs-12 enemy">
+			<div class= "col-md-6 col-sm-12 col-xs-12 villain">
 				<div class="subheading">
 					Villains
 				</div>
 				<div class= "row">
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain5" class="card card5" style="width: 100%;">
+						<div id= "villain1" class="card" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Red Skull.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Red Skull</h4>
-						    <p class="card-text">Health points:<span class="villainHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 					
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain6" class="card 6" style="width: 100%;">
+						<div id= "villain2" class="card" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Joker.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Joker</h4>
-						    <p class="card-text">Health points:<span class="villainHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain7" class="card 7" style="width: 100%;">
+						<div id= "villain3" class="card" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Loki.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Loki</h4>
-						    <p class="card-text">Health points:<span class="villainHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain8" class="card 8" style="width: 100%;">
+						<div id= "villain4" data-imageId="4" class="card" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/GreenGoblin.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Green Goblin</h4>
-						    <p class="card-text">Health points:<span class="villainHP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -116,7 +116,7 @@
 			</div>
 			<div class= "row">
 				<div class="col-md-12 text-center"> 
-			    	<button id="singlebutton" name="singlebutton" class="btn btn-primary">Attack Button!</button> 
+			    	<button id="singlebutton" name="singlebutton" class="attackbutton btn btn-primary">Attack Button!</button> 
 				</div>	
 			</div>
 		</div>
