--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		</div>
 
 		<div class="row">
-			<div class ="col-md-6 col-sm-12 col-xs-12 heroe">
-				<div class="subheading">
+			<div class ="col-md-6 col-sm-12 col-xs-12 heroesContent">
+				<div class="heroesSubheading">
 				Heroes
 				</div>
 				<div class="row">
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe1" class="card" data-imageId="1" style="width: 100%;">
+						<div id= "hero1" class="card hero" data-imageId="1" style="width: 100%;">
 						  <img id="image" class="card-img-top" src="assets/images/CaptainAmerica.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Captain America</h4>
@@ -39,7 +39,7 @@
 						</div>
 					</div>
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe2" class="card" style="width: 100%;">
+						<div id= "hero2" class="card hero" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Spiderman.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Spiderman</h4>
@@ -48,7 +48,7 @@
 						</div>
 					</div>
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe3" class="card" style="width: 100%;">
+						<div id= "hero3" class="card hero" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Thor.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Thor</h4>
@@ -57,7 +57,7 @@
 						</div>
 					</div>
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "heroe4" class="card" style="width: 100%;">
+						<div id= "hero4" class="card hero" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Batman.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Batman</h4>
@@ -68,13 +68,13 @@
 				</div>
 			</div>
 
-			<div class= "col-md-6 col-sm-12 col-xs-12 villain">
-				<div class="subheading">
+			<div class= "col-md-6 col-sm-12 col-xs-12 villainsContent">
+				<div class="villainsSubheading">
 					Villains
 				</div>
 				<div class= "row">
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain1" class="card" style="width: 100%;">
+						<div id= "villain1" class="card villain" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Red Skull.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Red Skull</h4>
@@ -84,7 +84,7 @@
 					</div>
 					
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain2" class="card" style="width: 100%;">
+						<div id= "villain2" class="card villain" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Joker.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Joker</h4>
@@ -94,7 +94,7 @@
 					</div>
 
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain3" class="card" style="width: 100%;">
+						<div id= "villain3" class="card villain" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/Loki.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Loki</h4>
@@ -104,7 +104,7 @@
 					</div>
 
 					<div class ="col-md-3 col-sm-3 col-xs-3">
-						<div id= "villain4" data-imageId="4" class="card" style="width: 100%;">
+						<div id= "villain4" data-imageId="4" class="card villain" style="width: 100%;">
 						  <img class="card-img-top" src="assets/images/GreenGoblin.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Green Goblin</h4>
@@ -119,6 +119,30 @@
 			    	<button id="singlebutton" name="singlebutton" class="attackbutton btn btn-primary">Attack Button!</button> 
 				</div>	
 			</div>
+
+			<div class="row">
+				<div class="col-md-6 text-center">
+					<div class="heroPickedSubheading">
+					</div>
+					<div class="row">
+						<div class="col-md-4 col-md-offset-4">
+							<div class="heroPicked">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 text-center">
+					<div class="villainPickedSubheading">
+					</div>
+					<div class="row">
+						<div class="col-md-4 col-md-offset-4">
+							<div class="villainPicked">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
