--- a/index.html
+++ b/index.html
@@ -114,12 +114,6 @@
 					</div>
 				</div>
 			</div>
-			<div class= "row">
-				<div class="col-md-12 text-center"> 
-			    	<button id="singlebutton" name="singlebutton" class="attackbutton btn btn-primary">Attack Button!</button> 
-				</div>	
-			</div>
-
 			<div class="row">
 				<div class="col-md-6 text-center">
 					<div class="heroPickedSubheading">
@@ -143,6 +137,32 @@
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="col-md-6 text-center">
+					<div class="row">
+						<div class="col-md-4 col-md-offset-4">
+							<div class="heroPickedResults">
+								<p></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 text-center">
+					<div class="row">
+						<div class="col-md-4 col-md-offset-4">
+							<div class="villainPickedResults">
+								<p></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class= "row">
+				<div class="col-md-12 text-center attackButton"> 
+			    	<button id="singlebutton" name="singlebutton" class="btn btn-danger">Attack Button!</button> 
+				</div>	
+			</div>
 		</div>
 	</div>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
