--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 		<div class="main subheading">
 			<div class="instructions">
 				<p class="title">Instructions:</p>
-				<p>For this game you first have to pick a heroe. This is the heroe that you will use to fight the villains shown on the right. The goal is the game is to reduce the villains health points to 0 or below. If at any point your character's health points get to 0 or below you lose the game. </p>
+					<ol>
+						<li> For this game you first have to pick a heroe.</li> 
+						<li> Then pick the villain you want to fight first.</li>
+						<li> If you defeat the first villian you will go on to fight the next villain you pick </li> 
+					</ol>
+
+ <p>The goal is the game is to reduce the villains health points to 0 or below. If at any point your character's health points get to 0 or below you lose the game. If you defeat all the villains you win! </p>
 			</div>
 		</div>
 
@@ -98,7 +104,7 @@
 						  <img class="card-img-top" src="assets/images/Loki.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Loki</h4>
-						    <p class="card-text">Health points: <span class="HP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -108,28 +114,28 @@
 						  <img class="card-img-top" src="assets/images/GreenGoblin.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Green Goblin</h4>
-						    <p class="card-text">Health points: <span class="HP"></span></p>
+						    <p class="card-text">Health points:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 text-center">
+				<div class="col-md-6 col-sm-6 col-xs-6 text-center heroPickedContent">
 					<div class="heroPickedSubheading">
 					</div>
 					<div class="row">
-						<div class="col-md-4 col-md-offset-4">
+						<div class="col-md-4 col-md-offset-4 col-sm-4">
 							<div class="heroPicked">
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 text-center">
+				<div class="col-md-6 col-sm-6 col-xs-6 text-center villainPickedContent">
 					<div class="villainPickedSubheading">
 					</div>
 					<div class="row">
-						<div class="col-md-4 col-md-offset-4">
+						<div class="col-md-4 col-md-offset-4 col-sm-4">
 							<div class="villainPicked">
 							</div>
 						</div>
@@ -138,20 +144,22 @@
 			</div>
 
 			<div class="row">
-				<div class="col-md-6 text-center">
+				<div class="col-md-6 col-sm-6 col-xs-6text-center">
 					<div class="row">
 						<div class="col-md-4 col-md-offset-4">
 							<div class="heroPickedResults">
-								<p></p>
+								<p>
+								</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 text-center">
+				<div class="col-md-6 col-sm-6 col-xs-6 text-center">
 					<div class="row">
 						<div class="col-md-4 col-md-offset-4">
 							<div class="villainPickedResults">
-								<p></p>
+								<p>
+								</p>
 							</div>
 						</div>
 					</div>
@@ -159,7 +167,7 @@
 			</div>
 
 			<div class= "row">
-				<div class="col-md-12 text-center attackButton"> 
+				<div class="col-md-12 col-sm-12 col-xs-12 text-center attackButton"> 
 			    	<button id="singlebutton" name="singlebutton" class="btn btn-danger">Attack Button!</button> 
 				</div>	
 			</div>
