added a reset button

--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
 			    	<button id="singlebutton" name="singlebutton" class="btn btn-danger">Attack Button!</button> 
 				</div>	
 			</div>
+			<div class= "row">
+				<div class="col-md-12 col-sm-12 col-xs-12 text-center resetButton"> 
+			    	<button id="singlebutton" name="singlebutton" class="btn btn-warning">Reset Button!</button> 
+				</div>	
+			</div>
 		</div>
 	</div>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
