added hovering effects

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						  <img id="image" class="card-img-top" src="assets/images/CaptainAmerica.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Captain America</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -49,7 +49,7 @@
 						  <img class="card-img-top" src="assets/images/Spiderman.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Spiderman</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -58,7 +58,7 @@
 						  <img class="card-img-top" src="assets/images/Thor.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Thor</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -67,7 +67,7 @@
 						  <img class="card-img-top" src="assets/images/Batman.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Batman</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -84,7 +84,7 @@
 						  <img class="card-img-top" src="assets/images/Red Skull.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Red Skull</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 						  <img class="card-img-top" src="assets/images/Joker.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Joker</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -104,7 +104,7 @@
 						  <img class="card-img-top" src="assets/images/Loki.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Loki</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
@@ -114,7 +114,7 @@
 						  <img class="card-img-top" src="assets/images/GreenGoblin.jpg" alt="Card image cap">
 						  <div class="card-body">
 						    <h4 class="card-title">Green Goblin</h4>
-						    <p class="card-text">Health points:<span class="HP"></span></p>
+						    <p class="card-text">HP:<span class="HP"></span></p>
 						  </div>
 						</div>
 					</div>
