--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body> 
 
 	<nav class="navbar navbar-light bg-light">
-		<span class="navbar-brand mb-0 h1">Fighting Game</span>
+		<span class="navbar-brand mb-0 h1">Heroes vs Villains: RPG Game</span>
 	</nav>
 
 	<div class="container">
@@ -19,13 +19,8 @@
 		<div class="main subheading">
 			<div class="instructions">
 				<p class="title">Instructions:</p>
-					<ol>
-						<li> For this game you first have to pick a heroe.</li> 
-						<li> Then pick the villain you want to fight first.</li>
-						<li> If you defeat the first villian you will go on to fight the next villain you pick </li> 
-					</ol>
-
- <p>The goal is the game is to reduce the villains health points to 0 or below. If at any point your character's health points get to 0 or below you lose the game. If you defeat all the villains you win! </p>
+				<p> For this game you first pick a heroe. This hero will be your character throughout the game. Then pick the villain you want to fight first. If you defeat the first villian you will go on to fight the next villain you pick. </p> 
+				<p>The goal is the game is to reduce the villains health points to 0 or below. If at any point your character's health points get to 0 or below you lose the game. If you defeat all the villains you win! </p>
 			</div>
 		</div>
 
@@ -121,7 +116,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-sm-6 col-xs-6 text-center heroPickedContent">
+				<div class="col-md-5 col-sm-6 col-xs-6 text-center heroPickedContent">
 					<div class="heroPickedSubheading">
 					</div>
 					<div class="row">
@@ -131,7 +126,21 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 col-sm-6 col-xs-6 text-center villainPickedContent">
+
+				
+				<div class="col-md-2 col-sm-6 col-xs-6 text-center">
+					<div class= "row">
+						<div class="col-md-12 col-sm-12 col-xs-12 text-center attackButton"> 
+					    	<button id="singlebutton" name="singlebutton" class="btn btn-danger">Attack Button!</button> 
+						</div>
+						<div class="col-md-12 col-sm-12 col-xs-12 text-center resetButton"> 
+			    			<button id="singlebutton" name="singlebutton" class="btn btn-warning">Reset Button!</button> 
+			    		</div>
+					</div>	
+				</div>
+				
+
+				<div class="col-md-5 col-sm-6 col-xs-6 text-center villainPickedContent">
 					<div class="villainPickedSubheading">
 					</div>
 					<div class="row">
@@ -166,16 +175,8 @@
 				</div>
 			</div>
 
-			<div class= "row">
-				<div class="col-md-12 col-sm-12 col-xs-12 text-center attackButton"> 
-			    	<button id="singlebutton" name="singlebutton" class="btn btn-danger">Attack Button!</button> 
-				</div>	
-			</div>
-			<div class= "row">
-				<div class="col-md-12 col-sm-12 col-xs-12 text-center resetButton"> 
-			    	<button id="singlebutton" name="singlebutton" class="btn btn-warning">Reset Button!</button> 
-				</div>	
-			</div>
+
+
 		</div>
 	</div>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
