--- a/index.html
+++ b/index.html
@@ -6,100 +6,52 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
   	<title>Fighting Game</title>
 </head>
 <body> 
 
-	<nav class="navbar navbar-light bg-light">
-		<span class="navbar-brand mb-0 h1">Heroes vs Villains: RPG Game</span>
-	</nav>
+	<header>
+		Heroes vs Villains: RPG Game
+	</header>
 
-	<div class="container">
+	<div class="instructions">
+		<p> Pick a heroe and then a villain to fight first. If you defeat the first villian you will go on to fight the next villain you pick. The goal is the game is to reduce the villains health points to 0 or below. If your character's health points get to 0 or below you lose. If you defeat all the villains you win! </p>
+	</div>
 
-		<div class="main subheading">
-			<div class="instructions">
-				<p class="title">Instructions:</p>
-				<p> For this game you first pick a heroe. This hero will be your character throughout the game. Then pick the villain you want to fight first. If you defeat the first villian you will go on to fight the next villain you pick. </p> 
-				<p>The goal is the game is to reduce the villains health points to 0 or below. If at any point your character's health points get to 0 or below you lose the game. If you defeat all the villains you win! </p>
-			</div>
+	<div class="topSection">
+		<div class ="section heroesContent">
+			<div class="heroesSubheading"> Heroes </div>
+			<div class="heroesContainer"> </div>
 		</div>
 
-		<div class="row">
-			<div class ="col-md-6 col-sm-12 col-xs-12 heroesContent">
-				<div class="heroesSubheading">
-				Heroes
-				</div>
-				<div class="row heroesContainer">
-				</div>
-			</div>
-
-			<div class= "col-md-6 col-sm-12 col-xs-12 villainsContent">
-				<div class="villainsSubheading">
-				Villains
-				</div>
-				<div class= "row villainsContainer">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-5 col-sm-6 col-xs-6 text-center heroPickedContent">
-					<div class="heroPickedSubheading">
-					</div>
-					<div class="row">
-						<div class="col-md-4 col-md-offset-4 col-sm-4">
-							<div class="heroPicked">
-							</div>
-						</div>
-					</div>
-				</div>
-
-				
-				<div class="col-md-2 col-sm-6 col-xs-6 text-center">
-					<div class= "row">
-						<div class="col-md-12 col-sm-12 col-xs-12 text-center attackButton"> 
-					    	<button id="singlebutton" name="singlebutton" class="btn btn-danger">Attack Button!</button> 
-						</div>
-						<div class="col-md-12 col-sm-12 col-xs-12 text-center resetButton"> 
-			    			<button id="singlebutton" name="singlebutton" class="btn btn-warning">Reset Button!</button> 
-			    		</div>
-					</div>	
-				</div>
-				
-
-				<div class="col-md-5 col-sm-6 col-xs-6 text-center villainPickedContent">
-					<div class="villainPickedSubheading">
-					</div>
-					<div class="row">
-						<div class="col-md-4 col-md-offset-4 col-sm-4">
-							<div class="villainPicked">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-6 col-sm-6 col-xs-6text-center">
-					<div class="row">
-						<div class="col-md-4 col-md-offset-4">
-							<div class="heroPickedResults">
-								<p>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-sm-6 col-xs-6 text-center">
-					<div class="row">
-						<div class="col-md-4 col-md-offset-4">
-							<div class="villainPickedResults">
-								<p>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div class= "section villainsContent">
+			<div class="villainsSubheading"> Villains </div>
+			<div class= "villainsContainer"> </div>
 		</div>
+	</div>
+
+	<div class="bottomSection">
+		<div class="section heroPickedContent">
+			<div class="heroPickedSubheading"></div>
+			<div class="heroPickedResults"><p></p></div>
+			<div class="heroPicked"></div>
+		</div>
+		
+		<div>
+			<div class="attackButton"> 
+				<button class="btn btn-danger">Attack Button!</button> 
+			</div>
+			<div class="resetButton"> 
+				<button class="btn btn-warning">Reset Button!</button> 
+			</div>	
+		</div>
+
+		<div class="section villainPickedContent">
+			<div class="villainPickedSubheading"></div>
+			<div class="villainPickedResults"><p></p></div>
+			<div class="villainPicked"></div>
+		</div>			
 	</div>
 
 <script type="text/javascript" src="assets/javascript/game.js"></script>
