--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script> 
 	<link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
-  	<title>Fighting Game</title>
+  	<title>Heroes vs Villains</title>
 </head>
 <body>
 
@@ -24,7 +24,7 @@
 
 		<div class="middle">
 			<div>
-				<h1>Heroes vs Villains: RPG Game</h1>
+				<h1>Heroes vs Villains</h1>
 				<p> Pick a heroe and then a villain to fight first. If you defeat the first villian you will go on to fight the next villain you pick. The goal is the game is to reduce the villains health points to 0 or below. If your character's health points get to 0 or below you lose. If you defeat all the villains you win! </p>
 			</div>
 
