added a subheading displaying the instructions of the game

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 		<div class="middle">
 			<div>
 				<h1>Heroes vs Villains</h1>
-				<p> Pick a heroe and then a villain to fight first. If you defeat the first villian you will go on to fight the next villain you pick. The goal is the game is to reduce the villains health points to 0 or below. If your character's health points get to 0 or below you lose. If you defeat all the villains you win! </p>
+				<p> 
+					The goal is the game is to reduce the villains health points to 0 or below. If you defeat the first villian you will go on to fight the next villain you pick. If your character's health points get to 0 or below you lose. If you defeat all the villains you win! 
+				</p>
+				<p class="instructions"> 
+					To start pick a hero then the villain you want to fight first
+				</p>
 			</div>
 
 			<div class="battleSection">
